더미데이터 수정

--- a/codes/데이터 수집/san_make_dummy_data.ipynb
+++ b/codes/데이터 수집/san_make_dummy_data.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "181bf665-9da1-4b9b-b0de-51d07e06fd5f",
    "metadata": {
     "tags": []
@@ -70,44 +70,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  NAME                                    ID    PASSWORD  \\\n",
-      "0         Angela Davis  5317f7e4-c622-4aea-8677-fe0fb11daad8  A!6A42tek7   \n",
-      "1        Laura Schmidt  c0430a73-409f-4afb-bb88-268904e1bfd6  +YDPkE!rk1   \n",
-      "2      Danielle George  a4540082-eb87-4cd0-bf09-3085ec9512bc  zO5SpveZ7+   \n",
-      "3     Brittany Sanchez  6531d11f-168a-4ff9-a98b-4cf99f27c3f1  *mL%IoYkF1   \n",
-      "4          Andre Brown  2e378881-e38e-4b88-8219-68d5c3dcf8e6  $0OqvMFhp0   \n",
-      "..                 ...                                   ...         ...   \n",
-      "95          Robin Reed  bb4582b8-f2fb-4dd5-8aa0-3adae6763e50  *6+p(vjqrQ   \n",
-      "96  Miss Nicole Wilson  2cd3c56f-6df9-4c50-be3a-59a96c4d577f  )2XJyOViro   \n",
-      "97      Judith Gardner  084b3ada-6a13-4a49-ab5c-e61df3f21751  pT3Pay+Q(X   \n",
-      "98         Adam Hanson  24b8faa8-a013-4d5c-a3ac-6781d4ccd9f2  yw*$2MjPb%   \n",
-      "99        Wendy Torres  659674a5-f9e3-403b-8174-ef1168c7d5bc  2*V%to5M+4   \n",
+      "   NAME          ID    PASSWORD   BIRTHDATE  PHONE_NUMBER  \\\n",
+      "0   한예은  it4IDiPtDe  g%1LABio5U  1985-01-13  32-6485-1849   \n",
+      "1   김숙자  tBRj2XS5o8  !hZ%_4Vb7L  1973-06-30  84-4560-2233   \n",
+      "2   조민서  hs9mBI45cu  A8H9gb+#$m  1968-06-12  88-2872-6040   \n",
+      "3   서서연  SM3o5tZiuz  !fVY!VSx8L  1963-07-07  87-6732-6284   \n",
+      "4   김지훈  C2vV1tz9LC  (1K9Tdd9!A  1985-12-26  15-8507-8813   \n",
+      "..  ...         ...         ...         ...           ...   \n",
+      "95  최지연  ddEARhZiNO  1C0@3CZp!1  1948-11-11  38-6656-8524   \n",
+      "96  김정숙  aOuYNm1Fdy  #bAOWkx@p6  1973-01-25  42-7575-8337   \n",
+      "97  이재호  kNzK50MVEU  p)3HWu3ox(  1933-09-03  98-2346-2709   \n",
+      "98  윤지연  yfXxVN1iN1  M4DH&My4)7  1977-02-09  41-9294-9149   \n",
+      "99  김순옥  DEPLUYIGjr  y0QjAplr*E  1935-03-16  34-7964-4574   \n",
       "\n",
-      "     BIRTHDATE            PHONE_NUMBER                EMAIL_ADDRESS  \\\n",
-      "0   1940-03-15       490.985.7169x6918          nmiller@example.com   \n",
-      "1   1943-01-16     +1-252-746-5335x502           iclark@example.com   \n",
-      "2   2000-02-23        531-608-2398x361  williamsshannon@example.org   \n",
-      "3   1978-12-11  001-662-454-7524x55574          megan49@example.net   \n",
-      "4   1946-02-24       (298)320-1877x190    rebekahbishop@example.com   \n",
-      "..         ...                     ...                          ...   \n",
-      "95  1946-01-04         +1-697-481-4124  charleneramirez@example.org   \n",
-      "96  1992-08-23        920-892-5448x407      jacobvaldez@example.net   \n",
-      "97  1982-06-29     +1-959-805-3882x806        michael37@example.org   \n",
-      "98  1953-06-19    001-761-827-1716x843     johncampbell@example.com   \n",
-      "99  1968-11-20           (634)701-4536           inunez@example.org   \n",
+      "               EMAIL_ADDRESS                        ADDRESS  UNIQUE_ID  \\\n",
+      "0       subingim@example.net            제주특별자치도 평창군 언주116거리       3296   \n",
+      "1   yeongsigjang@example.com  경상북도 안산시 단원구 서초대488거리 (아름송서리)       1306   \n",
+      "2           ogim@example.org         서울특별시 서대문구 강남대로 (정희김읍)       4032   \n",
+      "3             hi@example.com       전라북도 예산군 반포대38가 (지우이강마을)       7412   \n",
+      "4       sangho48@example.net                세종특별자치시 노원구 오금로       5619   \n",
+      "..                       ...                            ...        ...   \n",
+      "95      seongsui@example.net               제주특별자치도 안양시 강남대길       7142   \n",
+      "96      gimsunja@example.com                 경상남도 제천시 선릉81가       5076   \n",
+      "97          ibag@example.net                전라남도 태백시 개포232가       1401   \n",
+      "98   yeongmigang@example.net                대전광역시 마포구 개포18가       9780   \n",
+      "99      hyeonu55@example.net                 충청남도 연천군 석촌호수길       9643   \n",
       "\n",
-      "                                              ADDRESS  UNIQUE_ID GENDER_ID  \n",
-      "0             247 Duane Corners\\nLake Stacy, AZ 31592       6753         여  \n",
-      "1       022 Raymond Estates\\nNorth Annmouth, ND 58291       9638         여  \n",
-      "2             2510 Stone Union\\nGarciamouth, CA 67752       2696         여  \n",
-      "3         6004 Espinoza Curve\\nSouth Brandy, VT 08248       5965         여  \n",
-      "4                          USNV Barnett\\nFPO AP 37146       5131         남  \n",
-      "..                                                ...        ...       ...  \n",
-      "95      02700 Susan Curve\\nChristensenmouth, OH 38699       5267         남  \n",
-      "96                   Unit 8589 Box 3662\\nDPO AE 63123       9103         여  \n",
-      "97  99537 Elizabeth Spurs\\nEast Alexismouth, AK 84816       1142         여  \n",
-      "98     745 Harrison Stravenue\\nDouglasville, PA 00976       7626         남  \n",
-      "99        873 Jenkins Forest\\nLake Mckenzie, PR 30707       8052         남  \n",
+      "   GENDER_ID  \n",
+      "0          F  \n",
+      "1          M  \n",
+      "2          M  \n",
+      "3          F  \n",
+      "4          M  \n",
+      "..       ...  \n",
+      "95         F  \n",
+      "96         F  \n",
+      "97         F  \n",
+      "98         F  \n",
+      "99         M  \n",
       "\n",
       "[100 rows x 9 columns]\n"
      ]
@@ -117,25 +117,36 @@
     "import pandas as pd\n",
     "import random\n",
     "import faker\n",
+    "import string\n",
     "\n",
     "# 무작위 데이터 생성을 위한 가짜 데이터 생성기 생성\n",
-    "fake = faker.Faker()\n",
+    "fake = faker.Faker('ko_KR')  # 한국어 데이터 생성을 위해 'ko_KR' 로 설정\n",
     "\n",
     "# 데이터 프레임을 위한 빈 리스트 생성\n",
     "data = []\n",
     "\n",
     "# 레코드 수 (100개)만큼 반복하여 무작위 데이터 생성\n",
     "for _ in range(100):\n",
+    "    # 전화번호를 한국식으로 생성 (예: 010-1234-5678)\n",
+    "    phone_number = str(fake.random_int(min=10, max=99))\n",
+    "    phone_number += '-' + str(fake.random_int(min=1000, max=9999))\n",
+    "    phone_number += '-' + str(fake.random_int(min=1000, max=9999))\n",
+    "    \n",
+    "    # 영문과 숫자를 조합하여 ID 생성\n",
+    "    id_length = 10  # ID의 길이를 조절할 수 있습니다.\n",
+    "    id_characters = string.ascii_letters + string.digits\n",
+    "    generated_id = ''.join(random.choice(id_characters) for _ in range(id_length))\n",
+    "    \n",
     "    data.append({\n",
     "        'NAME': fake.name(),\n",
-    "        'ID': fake.uuid4(),\n",
+    "        'ID': generated_id,\n",
     "        'PASSWORD': fake.password(),\n",
     "        'BIRTHDATE': fake.date_of_birth(minimum_age=18, maximum_age=90).strftime('%Y-%m-%d'),\n",
-    "        'PHONE_NUMBER': fake.phone_number(),\n",
+    "        'PHONE_NUMBER': phone_number,\n",
     "        'EMAIL_ADDRESS': fake.email(),\n",
     "        'ADDRESS': fake.address(),\n",
     "        'UNIQUE_ID': fake.random_int(min=1000, max=9999),\n",
-    "        'GENDER_ID': random.choice(['남', '여'])\n",
+    "        'GENDER_ID': random.choice(['M', 'F'])\n",
     "    })\n",
     "\n",
     "# 데이터 프레임 생성\n",
@@ -413,11 +424,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "99464857-bdd9-4627-a54f-6345508fe64c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('../../datasets/dummydata1.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
