통합 회원정보

--- a/codes/데이터 수집/san_make_dummy_data.ipynb
+++ b/codes/데이터 수집/san_make_dummy_data.ipynb
@@ -454,6 +454,348 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "fe2b937a-075a-42ed-8528-0ebe135286b6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pymongo as mg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "75322744-8e60-4a15-8deb-1a9218bb0be0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "client = mg.MongoClient(host='mongodb://localhost:27017')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "9a820a3c-5b4d-4279-adba-c316bb59f271",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "database = client['project_data_analytics']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "fa6e970d-a87c-49b3-a6f8-e8df02521ab3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "collection = database['DummyData_MemberInfo']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f8bf53a1-1c2e-4cdc-8def-0615fa7c5907",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cursor = collection.find({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "9e4f5f0a-67ce-41aa-bc03-4526cc284344",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(list(cursor))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "49733982-b1c1-4978-a8d5-767f3f3cf78a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>PASSWORD</th>\n",
+       "      <th>BIRTHDATE</th>\n",
+       "      <th>PHONE_NUMBER</th>\n",
+       "      <th>EMAIL_ADDRESS</th>\n",
+       "      <th>ADDRESS</th>\n",
+       "      <th>GENDER_ID</th>\n",
+       "      <th>JOIN_DATE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6524effe4a2a878233cd7410</td>\n",
+       "      <td>한지민</td>\n",
+       "      <td>gpmden</td>\n",
+       "      <td>s4p45nvf</td>\n",
+       "      <td>19790720</td>\n",
+       "      <td>010-3941-4638</td>\n",
+       "      <td>ed6rfbf6@daum.net</td>\n",
+       "      <td>서울시 강남구 195번길</td>\n",
+       "      <td>여</td>\n",
+       "      <td>2023-10-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6524effe4a2a878233cd7411</td>\n",
+       "      <td>김민수</td>\n",
+       "      <td>kcdcswvti</td>\n",
+       "      <td>d7tx669yxpc</td>\n",
+       "      <td>19860126</td>\n",
+       "      <td>010-7322-2382</td>\n",
+       "      <td>q77@daum.net</td>\n",
+       "      <td>서울시 서초구 068번길</td>\n",
+       "      <td>여</td>\n",
+       "      <td>2023-07-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6524effe4a2a878233cd7412</td>\n",
+       "      <td>최민지</td>\n",
+       "      <td>kbvxzqc</td>\n",
+       "      <td>leibzddjey</td>\n",
+       "      <td>19821005</td>\n",
+       "      <td>010-8509-8186</td>\n",
+       "      <td>kcwuu6@gmail.com</td>\n",
+       "      <td>서울시 마포구 418번길</td>\n",
+       "      <td>여</td>\n",
+       "      <td>2023-07-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6524effe4a2a878233cd7413</td>\n",
+       "      <td>박영희</td>\n",
+       "      <td>cihbstx</td>\n",
+       "      <td>ly6ghuhx</td>\n",
+       "      <td>19980104</td>\n",
+       "      <td>010-5988-3329</td>\n",
+       "      <td>c4d@naver.com</td>\n",
+       "      <td>서울시 마포구 143번길</td>\n",
+       "      <td>여</td>\n",
+       "      <td>2023-08-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6524effe4a2a878233cd7414</td>\n",
+       "      <td>정태영</td>\n",
+       "      <td>ibthi</td>\n",
+       "      <td>r1d6c8nn9</td>\n",
+       "      <td>19820110</td>\n",
+       "      <td>010-1309-7911</td>\n",
+       "      <td>lgf@yahoo.co.kr</td>\n",
+       "      <td>서울시 동작구 826번길</td>\n",
+       "      <td>남</td>\n",
+       "      <td>2023-07-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>6524f0084a2a878233cd74d3</td>\n",
+       "      <td>고아름</td>\n",
+       "      <td>20yea5k17g</td>\n",
+       "      <td>%N3T6tBjj&amp;</td>\n",
+       "      <td>1979-12-24 00:00:00</td>\n",
+       "      <td>017-1320-7195</td>\n",
+       "      <td>yejunjang@example.com</td>\n",
+       "      <td>서울특별시 동작구 동작대로 1200번길</td>\n",
+       "      <td>여</td>\n",
+       "      <td>2023-07-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>6524f0084a2a878233cd74d4</td>\n",
+       "      <td>이정숙</td>\n",
+       "      <td>NWcGiRY2rQ</td>\n",
+       "      <td>#l%Zhl^_!8</td>\n",
+       "      <td>1993-07-10 00:00:00</td>\n",
+       "      <td>010-5328-9392</td>\n",
+       "      <td>hyeonsug12@example.com</td>\n",
+       "      <td>서울특별시 마포구 마포대로 1300번길</td>\n",
+       "      <td>남</td>\n",
+       "      <td>2023-07-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>6524f0084a2a878233cd74d5</td>\n",
+       "      <td>이상훈</td>\n",
+       "      <td>sRK75wcKTk</td>\n",
+       "      <td>)7@KtRjmR7</td>\n",
+       "      <td>1989-11-01 00:00:00</td>\n",
+       "      <td>010-2570-7896</td>\n",
+       "      <td>ijeongho@example.net</td>\n",
+       "      <td>서울특별시 종로구 종로 2300번길</td>\n",
+       "      <td>남</td>\n",
+       "      <td>2023-07-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>6524f0084a2a878233cd74d6</td>\n",
+       "      <td>송현우</td>\n",
+       "      <td>auh9jNElAL</td>\n",
+       "      <td>sg_G7GMYV_</td>\n",
+       "      <td>1993-10-24 00:00:00</td>\n",
+       "      <td>010-8493-3856</td>\n",
+       "      <td>junho71@example.org</td>\n",
+       "      <td>서울특별시 양천구 목동동로 1900번길</td>\n",
+       "      <td>남</td>\n",
+       "      <td>2023-09-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>6524f0084a2a878233cd74d7</td>\n",
+       "      <td>노지혜</td>\n",
+       "      <td>uS0FMoLlSl</td>\n",
+       "      <td>CvTRFevA+7</td>\n",
+       "      <td>1938-03-10 00:00:00</td>\n",
+       "      <td>02-4867-3183</td>\n",
+       "      <td>baegmigyeong@example.org</td>\n",
+       "      <td>서울특별시 종로구 종로 2300번길</td>\n",
+       "      <td>여</td>\n",
+       "      <td>2023-09-12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          _id NAME          ID     PASSWORD  \\\n",
+       "0    6524effe4a2a878233cd7410  한지민      gpmden     s4p45nvf   \n",
+       "1    6524effe4a2a878233cd7411  김민수   kcdcswvti  d7tx669yxpc   \n",
+       "2    6524effe4a2a878233cd7412  최민지     kbvxzqc   leibzddjey   \n",
+       "3    6524effe4a2a878233cd7413  박영희     cihbstx     ly6ghuhx   \n",
+       "4    6524effe4a2a878233cd7414  정태영       ibthi    r1d6c8nn9   \n",
+       "..                        ...  ...         ...          ...   \n",
+       "195  6524f0084a2a878233cd74d3  고아름  20yea5k17g   %N3T6tBjj&   \n",
+       "196  6524f0084a2a878233cd74d4  이정숙  NWcGiRY2rQ   #l%Zhl^_!8   \n",
+       "197  6524f0084a2a878233cd74d5  이상훈  sRK75wcKTk   )7@KtRjmR7   \n",
+       "198  6524f0084a2a878233cd74d6  송현우  auh9jNElAL   sg_G7GMYV_   \n",
+       "199  6524f0084a2a878233cd74d7  노지혜  uS0FMoLlSl   CvTRFevA+7   \n",
+       "\n",
+       "               BIRTHDATE   PHONE_NUMBER             EMAIL_ADDRESS  \\\n",
+       "0               19790720  010-3941-4638         ed6rfbf6@daum.net   \n",
+       "1               19860126  010-7322-2382              q77@daum.net   \n",
+       "2               19821005  010-8509-8186          kcwuu6@gmail.com   \n",
+       "3               19980104  010-5988-3329             c4d@naver.com   \n",
+       "4               19820110  010-1309-7911           lgf@yahoo.co.kr   \n",
+       "..                   ...            ...                       ...   \n",
+       "195  1979-12-24 00:00:00  017-1320-7195     yejunjang@example.com   \n",
+       "196  1993-07-10 00:00:00  010-5328-9392    hyeonsug12@example.com   \n",
+       "197  1989-11-01 00:00:00  010-2570-7896      ijeongho@example.net   \n",
+       "198  1993-10-24 00:00:00  010-8493-3856       junho71@example.org   \n",
+       "199  1938-03-10 00:00:00   02-4867-3183  baegmigyeong@example.org   \n",
+       "\n",
+       "                   ADDRESS GENDER_ID  JOIN_DATE  \n",
+       "0            서울시 강남구 195번길         여 2023-10-08  \n",
+       "1            서울시 서초구 068번길         여 2023-07-10  \n",
+       "2            서울시 마포구 418번길         여 2023-07-28  \n",
+       "3            서울시 마포구 143번길         여 2023-08-14  \n",
+       "4            서울시 동작구 826번길         남 2023-07-12  \n",
+       "..                     ...       ...        ...  \n",
+       "195  서울특별시 동작구 동작대로 1200번길         여 2023-07-10  \n",
+       "196  서울특별시 마포구 마포대로 1300번길         남 2023-07-18  \n",
+       "197    서울특별시 종로구 종로 2300번길         남 2023-07-26  \n",
+       "198  서울특별시 양천구 목동동로 1900번길         남 2023-09-10  \n",
+       "199    서울특별시 종로구 종로 2300번길         여 2023-09-12  \n",
+       "\n",
+       "[200 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "ff3d5f7d-2afc-4f8e-8341-4443b65d02d5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('../../datasets/DB_MemberInfo.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79b16aaf-7f9f-4c7f-9589-33a8fffb37d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b69c78c1-ed1e-446c-915c-b76edaff5828",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
